tests/snapshots/run_wpt_conformance__trtx_convTranspose2d_float16_4D_input_and_filter_tensors_options_dilations.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv_transpose2d.https.any.js",
    "convTranspose2d float16 4D input and filter tensors options.dilations",
    "trtx",
    "PASS",
)
